IDEA-251640 reduce classloading on bootstrap
GitOrigin-RevId: d24935e43b96bb65441e9381f8399adcba941700